# src/main/app/model/secret.go
@@ -1,7 +1,8 @@
 package model
 
-type AppSecretModel struct {
+type Secret struct {
 	Key         string `json:"key,omitempty"`
+	Value       string `json:"value,omitempty"`
 	SnippetURL  string `json:"snippet_url,omitempty"`
 	OriginalKey string `json:"original_key,omitempty"`
 }
