# src/resources/docs/swagger.json
@@ -43,7 +43,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.AppSecretModel"
+                                "$ref": "#/definitions/model.Secret"
                             }
                         }
                     },
@@ -90,7 +90,7 @@
         }
     },
     "definitions": {
-        "model.AppSecretModel": {
+        "model.Secret": {
             "type": "object",
             "properties": {
                 "key": {
